Replace region capture module with working reference implementation

--- a/src/RegionCaptureHost/RegionCaptureHost.csproj
+++ b/src/RegionCaptureHost/RegionCaptureHost.csproj
@@ -20,6 +20,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\\RegionCapture\\RegionCapture.csproj" />
+    <ProjectReference Include="..\\RegionCapture\\XerahS.Avalonia.RegionCapture.csproj" />
   </ItemGroup>
 </Project>
